--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "autoload": {
         "psr-4": {
             "Core\\": "core/"
-        }
+        }, "files": ["config/app.php"]
     },
     "authors": [
         {
